// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BasicView Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: gray;"
        >
          <div
            class="MuiBox-root MuiBox-root-174"
          >
            <div
              class="MuiBox-root MuiBox-root-175"
            >
              <div
                class="div-root-176"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    Looks like you're the only one here,
                  </strong>
                </h5>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    send out this link to invite someone!
                  </strong>
                </h5>
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
                >
                  <div
                    class="MuiBox-root MuiBox-root-220 Styled(MuiBox)-root-219"
                    title="Copied!"
                  >
                    http://localhost/
                  </div>
                </h6>
              </div>
            </div>
            <div
              class="div-root-221"
            >
              <div
                class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-222 WithStyles(ForwardRef(Card))-root-223 MuiPaper-elevation10 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-253"
                >
                  <div
                    class="div-root-260"
                  >
                    <div
                      class="div-root-261"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-263 Styled(MuiBox)-root-262"
                      >
                        <div
                          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                          role="progressbar"
                          style="width: 40px; height: 40px;"
                        >
                          <svg
                            class="MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="20.2"
                              stroke-width="3.6"
                            />
                          </svg>
                        </div>
                      </div>
                      <video
                        autoplay=""
                        class="makeStyles-mirroredVideo-255 makeStyles-video-254  "
                        playsinline=""
                      />
                    </div>
                    <div
                      class="div-root-276"
                    >
                      <div
                        class="div-root-277"
                      >
                        <div
                          class="div-root-278"
                        >
                          <svg
                            viewBox="0 0 100 100"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="50"
                              cy="50"
                              fill="#67e4a6"
                              r="NaN"
                            />
                            <circle
                              cx="50"
                              cy="50"
                              fill-opacity="0"
                              r="NaN"
                              stroke="white"
                              stroke-opacity="0.5"
                              stroke-width="4"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        (You)
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: gray;"
      >
        <div
          class="MuiBox-root MuiBox-root-174"
        >
          <div
            class="MuiBox-root MuiBox-root-175"
          >
            <div
              class="div-root-176"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  Looks like you're the only one here,
                </strong>
              </h5>
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  send out this link to invite someone!
                </strong>
              </h5>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
              >
                <div
                  class="MuiBox-root MuiBox-root-220 Styled(MuiBox)-root-219"
                  title="Copied!"
                >
                  http://localhost/
                </div>
              </h6>
            </div>
          </div>
          <div
            class="div-root-221"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-222 WithStyles(ForwardRef(Card))-root-223 MuiPaper-elevation10 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-253"
              >
                <div
                  class="div-root-260"
                >
                  <div
                    class="div-root-261"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-263 Styled(MuiBox)-root-262"
                    >
                      <div
                        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                        role="progressbar"
                        style="width: 40px; height: 40px;"
                      >
                        <svg
                          class="MuiCircularProgress-svg"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="20.2"
                            stroke-width="3.6"
                          />
                        </svg>
                      </div>
                    </div>
                    <video
                      autoplay=""
                      class="makeStyles-mirroredVideo-255 makeStyles-video-254  "
                      playsinline=""
                    />
                  </div>
                  <div
                    class="div-root-276"
                  >
                    <div
                      class="div-root-277"
                    >
                      <div
                        class="div-root-278"
                      >
                        <svg
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="50"
                            cy="50"
                            fill="#67e4a6"
                            r="NaN"
                          />
                          <circle
                            cx="50"
                            cy="50"
                            fill-opacity="0"
                            r="NaN"
                            stroke="white"
                            stroke-opacity="0.5"
                            stroke-width="4"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      (You)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Chat Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
        >
          <div
            class="div-root-283"
          >
            <div
              class="div-root-284"
            />
            <div
              class="div-root-285"
            >
              <form>
                <input
                  class="input-root-286"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
      >
        <div
          class="div-root-283"
        >
          <div
            class="div-root-284"
          />
          <div
            class="div-root-285"
          >
            <form>
              <input
                class="input-root-286"
                value=""
              />
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots DraggableSplitWrapper Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-302"
        >
          <div
            class="MuiBox-root MuiBox-root-303"
          >
            <div
              class="MuiBox-root MuiBox-root-304"
            >
              <div
                class="MuiBox-root MuiBox-root-307 Styled(MuiBox)-root-305 Styled(MuiBox)-root-306"
              >
                <div
                  class="MuiBox-root MuiBox-root-308"
                >
                  hi
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-309"
              >
                <div
                  class="div-root-310 div-root-311"
                  width="5"
                />
              </div>
              <div
                class="MuiBox-root MuiBox-root-313 Styled(MuiBox)-root-305 Styled(MuiBox)-root-312"
              >
                <div
                  class="MuiBox-root MuiBox-root-314"
                >
                  hi
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiBox-root MuiBox-root-302"
      >
        <div
          class="MuiBox-root MuiBox-root-303"
        >
          <div
            class="MuiBox-root MuiBox-root-304"
          >
            <div
              class="MuiBox-root MuiBox-root-307 Styled(MuiBox)-root-305 Styled(MuiBox)-root-306"
            >
              <div
                class="MuiBox-root MuiBox-root-308"
              >
                hi
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-309"
            >
              <div
                class="div-root-310 div-root-311"
                width="5"
              />
            </div>
            <div
              class="MuiBox-root MuiBox-root-313 Styled(MuiBox)-root-305 Styled(MuiBox)-root-312"
            >
              <div
                class="MuiBox-root MuiBox-root-314"
              >
                hi
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots ErrorPage Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          >
            Oops... The link you are trying to reach cannot be found
          </div>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <a
              href="/"
            >
              Go Home
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body1"
      >
        <div
          class="MuiBox-root MuiBox-root-65"
        >
          Oops... The link you are trying to reach cannot be found
        </div>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <a
            href="/"
          >
            Go Home
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
